[package]
name = "psp22"
version = "2.0.0"
edition = "2021"
authors = ["Cardinal"]
homepage = "https://github.com/Cardinal-Cryptography/PSP22"
repository = "https://github.com/Cardinal-Cryptography/PSP22"
license = "Apache-2.0"
readme = "README.md"
description = "Minimal implementation of PSP22 token standard in pure ink!"
exclude = [ ".github/*" ]

[dependencies]
ink = { version = "5.0.0", default-features = false }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = ["ink/std"]
ink-as-dependency = []
